@@ -1,4 +1,4 @@
-**How to build & run: (requires JDK 14 and Maven)**
+**How to build & run: (requires JDK 15 and Maven)**
 
 - Run `mvn clean javafx:run` from the project directory
 
@@ -6,15 +6,43 @@ Some external resources are required to properly run the application:
 - GermaNet
 - The [interlingual index](https://uni-tuebingen.de/en/faculties/faculty-of-humanities/departments/modern-languages/department-of-linguistics/chairs/general-and-computational-linguistics/ressources/lexica/germanet/description/interlingual-index/) for GermaNet
 - [Frequency lists](https://uni-tuebingen.de/en/faculties/faculty-of-humanities/departments/modern-languages/department-of-linguistics/chairs/general-and-computational-linguistics/ressources/lexica/germanet/applications-tools/) for GermaNet
+- IPA transcriptions
 
-The path to these resources can be specified in `src/main/java/logic/ResourcePaths.java`.
+These resources can be found here: https://jobim.ofai.at/gitlab/mate.lajko/puncat_resources
 
 
 
-**Setting up a development environment**
+**Building a JAR file:**
 
-Detailed steps for both IntelliJ and Eclipse can be found [here](https://openjfx.io/openjfx-docs). (The project was set up by following the non-modular IntelliJ steps.) In short, open the project in your IDE, then set up a run configuration to launch the `Main` class – either using Maven (the command is `mvn javafx:run`) or the IDE's built in runner (in this case the VM options are: `-Xms1g -Xmx2g --module-path path_to_openjfx_sdk --add-modules javafx.controls,javafx.fxml`).
+1. Run `mvn compile package -P jar` from the project directory
 
-The GermaNet API recommends using the following JVM options: `-Xms1g -Xmx1g`.  If you are using IntelliJ with the Maven Runner to launch PunCAT, you can set these flags in `Run > Edit configurations > (your Maven configuration) > Runner > VM Options`.
+2. Run the JAR file: `java -jar puncat.jar -Xms1g -Xmx2g`
 
-It is also possible to launch the application through IntelliJ without Maven Runner. [Download](https://gluonhq.com/products/javafx/) the JavaFX 15 SDK, then specify the SDK location and the appropriate run configuration as described [here (Non-modular from IDE)](https://openjfx.io/openjfx-docs/#IDE-Intellij).
+
+
+**Setting up a development environment:**
+
+Detailed steps for both IntelliJ and Eclipse can also be found [here](https://openjfx.io/openjfx-docs).
+
+**Eclipse**:
+
+1. Click **File** > **Import…**
+2. Select **Maven** > **Existing Maven Projects**
+3. Browse to the root directory of the repository
+4. Click **Finish**
+5. Click **Run** > **Run Configurations…**
+6. Select **Maven Build**, then click on **New launch configuration** in the upper left corner
+7. Select the project root folder as the **Base directory**
+8. Set **Goals** to `clean javafx:run`
+9. Click **Apply**
+
+**IntelliJ:**
+
+1. Click **Open or Import** on the welcome screen
+2. Browse to the root directory of the repository
+3. Click **Run** > **Edit Configurations…**
+4. Click **Maven** on the right sidebar
+5. Browse to **PunCAT** > **Plugins** > javafx > **javafx:run**
+6. Right click **javafx:run** and select **Create [puncat javafx:run]**
+7. It is probably a good idea to add the goal `clean` to the very beginning of the **Command line** field
+8. Click **OK**
